[package]
name = "scheduled-thread-pool"
version = "0.2.6"
authors = ["Steven Fackler <sfackler@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A scheduled thread pool"
repository = "https://github.com/sfackler/scheduled-thread-pool"
readme = "README.md"
keywords = ["threadpool", "pool"]
categories = ["concurrency"]

[features]
default = ["parking_lot"]

[dependencies]
parking_lot = { version = "0.12", optional = true }
